Updated header margin from % to pixel to fix misalignment of left/right headers

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -63,7 +63,7 @@ button:hover{
         display: flex;
         align-items: center;
         justify-content: start;
-        margin: 3%;
+        margin: 5px;
         div {
             padding-left: 15px;
         }
@@ -73,7 +73,7 @@ button:hover{
         display: flex;
         align-items: center;
         justify-content: end;
-        margin: 3%;
+        margin: 5px;
         div {
             padding-right: 15px;
         }
